# pdfnaut

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: python-publish.yml
docs/source/: conf.py  index.rst
docs/source/guides/: building-pdf.rst  dev-dictmodels.rst  modifying-pdf-metadata.rst  reading-pdf.rst  viewer-preferences.rst  working-with-outlines.rst  working-with-pages.rst  writing-pdf.rst
docs/source/reference/: common.rst  document.rst  exceptions.rst  filters.rst  objects.rst  page_list.rst  security_handler.rst  serializer.rst  standard_handler.rst  typings.rst
docs/source/reference/cos/: objects.rst  parser.rst  serializer.rst  tokenizer.rst
docs/source/reference/parsers/: pdf.rst  simple.rst
examples/: README.md  merge_pdf.py  pdf_info.py  print_outlines.py
pdfnaut/: __init__.py  exceptions.py  filters.py  parse.py  parsers.py  security_handler.py  serializer.py  types.py
pdfnaut/objects/: __init__.py  base.py  stream.py  xref.py
pdfnaut/parsers/: __init__.py  pdf.py  simple.py
src/pdfnaut/: __init__.py  document.py  exceptions.py  filters.py  page_list.py  security_handler.py  serializer.py
src/pdfnaut/common/: accessors.py  dates.py  dictmodels.py  fields.py  metadata.py  utils.py
src/pdfnaut/cos/: __init__.py  parser.py  serializer.py  tokenizer.py
src/pdfnaut/cos/encodings/: pdfdoc.py
src/pdfnaut/cos/objects/: __init__.py  base.py  containers.py  date.py  stream.py  xref.py
src/pdfnaut/objects/: __init__.py  actions.py  annotations.py  base.py  catalog.py  destinations.py  fields.py  outlines.py  page.py  stream.py  trailer.py  xmp.py  xref.py
src/pdfnaut/objects/annotations/: __init__.py  base.py  markup.py  non_markup.py
src/pdfnaut/parsers/: __init__.py  pdf.py
src/pdfnaut/security/: standard_handler.py
src/pdfnaut/security/providers/: __init__.py  _cryptodome.py  _pyca.py  base.py
src/pdfnaut/typings/: document.py  encryption.py  filters.py
tests/: test_dates.py  test_dictmodel.py  test_document.py  test_encryption.py  test_filters.py  test_metadata.py  test_object_parsing.py  test_parsing_files.py  test_serializer.py
tests/docs/: _metadata.py
