[project]
name = "pdfnaut"
description = "Explore PDFs with ease"
authors = [{ name = "Ãngel Carias", email = "lotta.dev@outlook.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: File Formats",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = ["typing-extensions >= 4.11.0"]

[tool.pyright]
pythonVersion = "3.10"

[project.urls]
homepage = "https://github.com/aescarias/pdfnaut"

[project.optional-dependencies]
dev = ["isort", "pytest", "pytest-cov", "ruff", "tox"]
docs = ["Sphinx", "sphinx-copybutton", "sphinx-design", "furo"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["./private/**"]

[tool.ruff.lint]
select = ["F", "E", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.dynamic]
version = { attr = "pdfnaut.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
